--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,204 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/drawer_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/colorDeep"
-    android:orientation="vertical"
-    tools:context="davidzapps.cryptoexchange.MainActivity">
+    android:fitsSystemWindows="false"
+    android:theme="@style/AppTheme1"
+    tools:openDrawer="start">
 
-    <RelativeLayout
+
+    <include
+        layout="@layout/app_bar_main"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:layout_marginLeft="5dp"
-        android:layout_marginTop="5dp"
-        android:id="@+id/relativeLayout">
+        android:layout_height="match_parent" />
 
-        <ImageView
-            android:id="@+id/imageView"
-            android:layout_width="40dp"
-            android:layout_height="50dp"
+    <android.support.design.widget.NavigationView
+        android:id="@+id/nav_view"
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:layout_gravity="start"
+        android:layout_marginTop="0dp"
+        android:fitsSystemWindows="false"
+        app:headerLayout="@layout/nav_header_main"
+        app:menu="@menu/activity_main_drawer" />
 
-            android:layout_alignParentStart="true"
-            android:layout_alignParentTop="true"
-            android:src="@drawable/apphead" />
-        <TextView
-            android:id="@+id/textView"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-
-            android:layout_marginLeft="2dp"
-            android:fontFamily="casual"
-            android:text="CRYPTOEXCHANGE"
-            android:textAppearance="@android:style/TextAppearance.DeviceDefault.DialogWindowTitle"
-            android:textStyle="bold"
-            android:layout_centerVertical="true"
-            android:layout_toEndOf="@+id/imageView" />
-
-        <ImageView
-            android:id="@+id/calcImageBtn"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentTop="true"
-            android:layout_marginEnd="9dp"
-            android:layout_toStartOf="@+id/settingImageBtn"
-            android:src="@drawable/calcul2" />
-
-        <ImageView
-            android:id="@+id/settingImageBtn"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentEnd="true"
-            android:layout_marginEnd="14dp"
-            android:src="@drawable/setting2" />
-
-    </RelativeLayout>
-
-    <ScrollView
-        android:layout_below="@id/relativeLayout"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/scrollView">
-
-    <RelativeLayout
-
-        android:layout_width="match_parent"
-        android:layout_height="450dp"
-        android:orientation="vertical"
-        android:layout_marginLeft="5dp"
-        android:layout_marginTop="5dp"
-        android:id="@+id/relativeLayout1">
-
-        <android.support.v7.widget.CardView
-            android:id="@+id/cryptoCardPop1"
-            android:layout_width="match_parent"
-            android:layout_height="60dp"
-            android:layout_alignParentStart="true"
-            android:layout_alignParentTop="true"
-            android:layout_marginBottom="2dp"
-            android:layout_marginLeft="16dp"
-            android:layout_marginRight="16dp"
-            android:layout_marginTop="2dp"
-            android:padding="8dp"
-            app:cardElevation="4dp" />
-
-        <android.support.v7.widget.CardView
-            android:id="@+id/cryptoCardPop2"
-            android:layout_width="match_parent"
-            android:layout_height="60dp"
-            android:layout_alignParentTop="false"
-            android:layout_below="@id/cryptoCardPop1"
-            android:layout_margin="16dp"
-            android:layout_marginBottom="2dp"
-            android:layout_marginTop="2dp"
-            android:padding="8dp"
-            app:cardElevation="4dp" />
-
-
-
-        <android.support.v7.widget.CardView
-            android:id="@+id/cryptoCardPop3"
-            android:layout_width="match_parent"
-            android:layout_height="60dp"
-            android:layout_alignParentTop="false"
-            android:layout_below="@id/cryptoCardPop2"
-            android:layout_margin="16dp"
-            android:layout_marginBottom="2dp"
-            android:layout_marginTop="2dp"
-            android:padding="8dp"
-            app:cardElevation="4dp" />
-
-        <android.support.v7.widget.CardView
-            android:id="@+id/cryptoCardPop4"
-            android:layout_width="match_parent"
-            android:layout_height="60dp"
-            android:layout_alignParentTop="false"
-            android:layout_below="@id/cryptoCardPop3"
-            android:layout_margin="16dp"
-            android:layout_marginBottom="2dp"
-            android:layout_marginTop="2dp"
-            android:padding="8dp"
-            app:cardElevation="4dp" />
-
-        <android.support.v7.widget.CardView
-            android:id="@+id/cryptoCardPop5"
-            android:layout_width="match_parent"
-            android:layout_height="60dp"
-            android:layout_marginTop="13dp"
-            android:padding="8dp"
-            app:cardElevation="4dp"
-            android:layout_marginLeft="16dp"
-            android:layout_marginRight="16dp"
-            android:layout_below="@+id/cryptoCardPop4" />
-
-        <android.support.v7.widget.CardView
-            android:id="@+id/cryptoCardPop6"
-            android:layout_width="match_parent"
-            android:layout_height="60dp"
-            android:layout_alignParentTop="false"
-            android:layout_below="@id/cryptoCardPop5"
-            android:layout_margin="16dp"
-            android:layout_marginBottom="2dp"
-            android:layout_marginTop="2dp"
-            android:padding="8dp"
-            app:cardElevation="4dp" />
-
-            <android.support.v7.widget.CardView
-            android:id="@+id/cryptoCardPop7"
-            android:layout_width="match_parent"
-            android:layout_height="60dp"
-            android:padding="8dp"
-            app:cardElevation="4dp"
-            android:layout_marginLeft="16dp"
-            android:layout_marginRight="16dp"
-            android:layout_alignParentTop="true"
-                android:layout_below="@+id/cryptoCardPop6"
-                android:layout_alignParentStart="true" />
-
-        <android.support.v7.widget.CardView
-            android:id="@+id/cryptoCardPop9"
-            android:layout_width="match_parent"
-            android:layout_height="60dp"
-            android:layout_alignParentTop="false"
-            android:layout_below="@+id/cryptoCardPop8"
-            android:layout_margin="16dp"
-            android:layout_marginBottom="2dp"
-            android:layout_marginTop="2dp"
-            android:padding="8dp"
-            app:cardElevation="4dp" />
-
-
-        <android.support.v7.widget.CardView
-            android:id="@+id/cryptoCardPop8"
-            android:layout_width="match_parent"
-            android:layout_height="60dp"
-            android:layout_alignParentTop="false"
-            android:layout_below="@id/cryptoCardPop7"
-            android:layout_margin="16dp"
-            android:layout_marginBottom="2dp"
-            android:layout_marginTop="2dp"
-            android:padding="8dp"
-            app:cardElevation="4dp" />
-
-        <android.support.v7.widget.CardView
-            android:id="@+id/cryptoCardPop10"
-            android:layout_width="match_parent"
-            android:layout_height="60dp"
-            android:layout_alignParentTop="false"
-            android:layout_below="@id/cryptoCardPop9"
-            android:layout_margin="16dp"
-            android:layout_marginBottom="2dp"
-            android:layout_marginTop="2dp"
-            android:padding="8dp"
-            app:cardElevation="4dp" />
-
-
-
-
-    </RelativeLayout>
-    </ScrollView>
-
-
-</RelativeLayout>
+</android.support.v4.widget.DrawerLayout>
