--- a/app/src/main/res/layout/welcome_main.xml
+++ b/app/src/main/res/layout/welcome_main.xml
@@ -1,11 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
     <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
         xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/colorPrimary"
-        android:backgroundTint="@android:color/darker_gray"
+        android:background="@color/colorDeep"
         tools:context="davidzapps.cryptoexchange.WelcomeActivity">
 
         <ImageView
@@ -13,8 +11,33 @@
             android:layout_width="240dp"
             android:layout_height="240dp"
             android:src="@drawable/welcome"
-            android:layout_centerVertical="true"
+            android:layout_marginTop="115dp"
+            android:layout_alignParentTop="true"
             android:layout_centerHorizontal="true" />
 
-    </RelativeLayout>
+    <TextView
+        android:id="@+id/textV4"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="9dp"
+        android:text="@string/an_alc_2_0_intermediate_track_challenge_app"
+        android:textAlignment="center"
+        android:textColor="#000000"
+        android:textStyle="bold"
+        android:layout_below="@+id/imageView4"
+        android:layout_centerHorizontal="true" />
+
+    <TextView
+        android:id="@+id/textView11"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/version_1_0_2017"
+        android:textAlignment="center"
+        android:textColor="#000000"
+        android:textStyle="bold"
+        android:layout_below="@+id/textV4"
+        android:layout_alignEnd="@+id/textV4"
+        android:layout_marginTop="8dp" />
+
+</RelativeLayout>
 
